--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="nav-links" id="mobileMenu">
             <div class="close-btn" onclick="closeMenu()">✖</div>
-            <a href="1_index_.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="2_About1_.html">About</a>
             <a href="3_Services3_.html">Services</a>
             <a href="4_FITPASS_App.html">FITPASS App</a>
