--- a/4_FITPASS_App.html
+++ b/4_FITPASS_App.html
@@ -217,7 +217,7 @@
             <span></span>
         </div>
         <nav id="nav">
-            <a href="1_index_.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="2_About1_.html">About</a>
             <a href="3_Services3_.html">Services</a>
             <a href="4_FITPASS_App.html">FITPASS APP</a>
