--- a/6_Log-in_from.html
+++ b/6_Log-in_from.html
@@ -322,7 +322,7 @@
                 <a href="2_About1_.html">About</a>
                 <a href="3_Services3_.html">Services</a>
                 <a href="4_FITPASS_App.html">FITPASS App</a>
-                <a style="color: #0d6efd;" href="5_Get_Started.html">Get Started</a>
+                <a style="color: #0d6efd;" href="5_Get_started.html">Get Started</a>
                 <a href="6_Log-in_from.html">Login</a>
             </div>
         </nav>
