--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style1.css">
   <link rel="shortcut icon" href="image copy 7.png" type="image/x-icon">
     <title> Gym Near Me in Pune - Find Gym in Pune | FITPass </title>
@@ -27,7 +29,7 @@
         </div>
         <div class="nav-links" id="mobileMenu">
             <div class="close-btn" onclick="closeMenu()">✖</div>
-            <a href="index.html">Home</a>
+            <a href="1_index_.html">Home</a>
             <a href="2_About1_.html">About</a>
             <a href="3_Services3_.html">Services</a>
             <a href="4_FITPASS_App.html">FITPASS App</a>
@@ -38,7 +40,7 @@
     <section id="hero">
         <div class="banner"></div>
         <div class="slide"></div>
-        <img src="image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
+        <img src="/9_Fitpass_Gym_sides/acdti.img/image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
         </div>
         </div>
     </section>
@@ -337,16 +339,50 @@
         </p>
 
         <div>
-            <p class="faq-question">
-                What do the membership plans include and how are they priced?
-                <i class="fa-solid fa-chevron-down"></i>
-            </p>
+          <div>
+            
 
-            <p class="faq-question">
-                Can I get a trial or guest pass before committing to a FITPASS membership?
-                <i class="fa-solid fa-chevron-down"></i>
-            </p>
+<div class="container my-4">
+  <h2 class="mb-4">Frequently Asked Questions</h2>
 
+  <div class="accordion" id="faqAccordion">
+    <!-- Question 1 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" data-bs-toggle="collapse" data-bs-target="#faq1" aria-expanded="false" aria-controls="faq1">
+        What do the membership plans include and how are they priced?
+        <i class="fa-solid fa-chevron-down"></i>
+      </h2>
+      <div id="faq1" class="collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          <p>FITPASS offers the following membership plans:</p>
+          <ul>
+            <li>Basic Plan (Reserve up to 5 workouts): Rs. 999*/ 1 month</li>
+            <li>Premium Plan (Unlimited workouts): Rs. 1599*/ 1 month</li>
+            <li>FITPASS (Unlimited workouts): Rs. 3999*/ 3 months</li>
+          </ul>
+          <p>
+            The above membership plans include the corresponding number of workout slots that enable you to engage in a wide range of exercise options like Zumba, yoga, CrossFit, strength training, pilates, callisthenics and many more.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Question 2 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" data-bs-toggle="collapse" data-bs-target="#faq2" aria-expanded="false" aria-controls="faq2">
+        Can I get a trial or guest pass before committing to a FITPASS membership?
+        <i class="fa-solid fa-chevron-down"></i>
+      </h2>
+      <div id="faq2" class="collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          No, FITPASS currently does not offer a trial or guest pass for workouts. However, if you wish to exercise at a particular gym for a short duration, you can avail of our monthly offer plan for Rs.999* and visit a fitness centre of your choice up to 5 times a month.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+          </div>
             <h3 class="contact-info">
                 Can't find an answer? Reach out to our team directly at care@fitpass.co.in or dial 1800-5714-466.
             </h3>
@@ -829,7 +865,7 @@
 </footer>
 
     </div>
-   
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
      <script>
         function openMenu() {
             document.getElementById('mobileMenu').classList.add('active');
