--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="nav-links" id="mobileMenu">
             <div class="close-btn" onclick="closeMenu()">✖</div>
-            <a href="1_index_.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="2_About1_.html">About</a>
             <a href="3_Services3_.html">Services</a>
             <a href="4_FITPASS_App.html">FITPASS App</a>
@@ -40,7 +40,7 @@
     <section id="hero">
         <div class="banner"></div>
         <div class="slide"></div>
-        <img src="/9_Fitpass_Gym_sides/acdti.img/image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
+        <img src="image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
         </div>
         </div>
     </section>
