--- a/4_FITPASS_App.html
+++ b/4_FITPASS_App.html
@@ -221,7 +221,7 @@
             <a href="2_About1_.html">About</a>
             <a href="3_Services3_.html">Services</a>
             <a href="4_FITPASS_App.html">FITPASS APP</a>
-            <a style="color: royalblue;" href="5_Get_Started.html">Get Started</a>
+            <a style="color: royalblue;" href="5_Get_started.html">Get Started</a>
             <a href="6_Log-in_from.html">Login</a>
         </nav>
     </header>
