--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     <input type="text" class="form-control" placeholder="Enter Mobile No.">
                 </div>
 
-                <button class="btn btn-danger w-100 mb-3">Send Link</button>
+                <button type="submit" class="btn btn-danger w-100 mb-3">Send Link</button>
 
                 <div class="d-flex justify-content-between">
                     <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
