in p tage give it style of

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
             </div>
         </div>
         <div class="text">
-            <p>Popular location in and around<a href="">Pune <i class="fa-solid fa-chevron-down"
+            <p style="width: 100%;">Popular location in and around<a href="">Pune <i class="fa-solid fa-chevron-down"
                         style="color: #ff0512;"></i></a></p>
         </div>
         <div class="container">
 
-            <div class="content">
+            <div class="content">r
                 <div class="row">
                     <h2>Hadapsar</h2>
                     <h4>26 studios <i class="fa-solid fa-chevron-right"></i></h4>
