add Aos in flie

--- a/1_index_.html
+++ b/1_index_.html
@@ -20,7 +20,7 @@
   <handler>
     <nav class="custom-navbar">
         <div class="logo">
-            <a href="index.html" style="text-decoration: none; color: #000;">
+            <a href="index_.html" style="text-decoration: none; color: #000;">
                 <span style="color: red;">FIT</span>PASS
             </a>
         </div>
@@ -31,7 +31,7 @@
         </div>
         <div class="nav-links" id="mobileMenu">
             <div class="close-btn" onclick="closeMenu()">✖</div>
-            <a href="index.html">Home</a>
+            <a href="1_index_.html">Home</a>
             <a href="2_About1_.html">About</a>
             <a href="3_Services3_.html">Services</a>
             <a href="4_FITPASS_App.html">FITPASS App</a>
@@ -42,7 +42,7 @@
     <section id="hero"data-aos="fade-down">
         <div class="banner"></div>
         <div class="slide"></div>
-        <img src="image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
+        <img src="/9_Fitpass_Gym_sides/acdti.img/image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
         </div>
         </div>
     </section>
@@ -853,8 +853,8 @@ No, FITPASS currently does not offer a trial or guest pass for workouts. However
     <div class="certification">
       <h4>Certification</h4>
       <p>We meet requisite international quality and data security standards</p>
-      <img src="image copy 4.png" alt="ISO" width="60">
-      <img src="image copy 5.png" alt="GDPR" width="60">
+      <img src="/9_Fitpass_Gym_sides/acdti.img/image copy 4.png" alt="ISO" width="60">
+      <img src="/9_Fitpass_Gym_sides/acdti.img/image copy 5.png" alt="GDPR" width="60">
     </div>
   </div>
 
@@ -869,7 +869,7 @@ No, FITPASS currently does not offer a trial or guest pass for workouts. However
     </div>
     <div class="footer-meta">
       <span>© 2015–2025 fitpass.co.in | All Rights Reserved</span>
-      <img src="image copy 3.png" alt="Payment Icons" height="25">
+      <img src="/9_Fitpass_Gym_sides/acdti.img/image copy 3.png" alt="Payment Icons" height="25">
     </div>
   </div>
 </footer>
