--- a/1_index_.html
+++ b/1_index_.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -42,7 +42,7 @@
     <section id="hero"data-aos="fade-down">
         <div class="banner"></div>
         <div class="slide"></div>
-        <img src="/9_Fitpass_Gym_sides/acdti.img/image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
+        <img src="image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
         </div>
         </div>
     </section>
