mase fixed in index flie and styled ok

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="6_Log-in_from.html">Login</a>
         </div>
     </nav>
-    <section id="hero"data-aos="fade-down">
+    <section id="hero"data-aos="fade-left">
         <div class="banner"></div>
         <div class="slide"></div>
         <img src="image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
@@ -58,7 +58,7 @@
     <!-- Gym Types Section -->
 
     <div class="gym-types-section" data-aos="fade-left">
-        <div class="gym-types-list">
+        <div class="gym-types-list"data-aos="fade-right">
             <div class="gym-type-card">
                 <img class="gym-type-img"
                     src="https://img.fitimg.in/gallery-image-abs-1-man-2024-56886F8B.png?format=webp&w=160&dpr=1.0"
@@ -450,7 +450,7 @@ No, FITPASS currently does not offer a trial or guest pass for workouts. However
      <hr>
      <div class="fqw">
     <div class="fvb" data-aos="fade-up"
-     data-aos-duration="3000">>
+     data-aos-duration="3000">
         <h2>Gyms in Pune</h2>
         <p>Pune is probably the buzziest metropolitan city not just in India, but the entire world. Being a cultural and
             technological hub, it attracts residents from all over the country. Hence the demand for different types of
