update in css flie it overflow

--- a/1_index_.html
+++ b/1_index_.html
@@ -853,8 +853,8 @@ No, FITPASS currently does not offer a trial or guest pass for workouts. However
     <div class="certification">
       <h4>Certification</h4>
       <p>We meet requisite international quality and data security standards</p>
-      <img src="/9_Fitpass_Gym_sides/acdti.img/image copy 4.png" alt="ISO" width="60">
-      <img src="/9_Fitpass_Gym_sides/acdti.img/image copy 5.png" alt="GDPR" width="60">
+      <img src="image copy 4.png" alt="ISO" width="60">
+      <img src="image copy 5.png" alt="GDPR" width="60">
     </div>
   </div>
 
@@ -869,7 +869,7 @@ No, FITPASS currently does not offer a trial or guest pass for workouts. However
     </div>
     <div class="footer-meta">
       <span>© 2015–2025 fitpass.co.in | All Rights Reserved</span>
-      <img src="/9_Fitpass_Gym_sides/acdti.img/image copy 3.png" alt="Payment Icons" height="25">
+      <img src="image copy 3.png" alt="Payment Icons" height="25">
     </div>
   </div>
 </footer>
