adit it index file of aos

--- a/index.html
+++ b/index.html
@@ -39,15 +39,19 @@
             <a href="6_Log-in_from.html">Login</a>
         </div>
     </nav>
-    <section id="hero"data-aos="fade-left">
+    <section id="hero" data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
         <div class="banner"></div>
         <div class="slide"></div>
         <img src="image.png" alt="Fitness Banner" style="width:100%;height:100%;object-fit:cover;border-radius:8px;">
         </div>
         </div>
     </section>
-</div data-aos="fade-down">
-    <div class="opp" >
+</div >
+    <div class="opp" data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
         <h1>Access <span>Premium Gyms &amp; Fitness Centres</span> Near You</h1>
     </div>
     <div class="oop1">
@@ -57,8 +61,10 @@
 <div>
     <!-- Gym Types Section -->
 
-    <div class="gym-types-section" data-aos="fade-left">
-        <div class="gym-types-list"data-aos="fade-right">
+    <div class="gym-types-section" data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
+        <div class="gym-types-list">
             <div class="gym-type-card">
                 <img class="gym-type-img"
                     src="https://img.fitimg.in/gallery-image-abs-1-man-2024-56886F8B.png?format=webp&w=160&dpr=1.0"
@@ -95,11 +101,13 @@
         </div> -->
         </div>
     </div>
-    <div class="text" data-aos="fade-right">
+    <div class="text">
         <p>Popular location in and around<a href="">Pune <i class="fa-solid fa-chevron-down"
                     style="color: #ff0512;"></i></a></p>
     </div>
-    <div class="container" data-aos="fade-up-right">
+    <div class="container" data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
 
         <div class="content">
             <div class="row">
@@ -248,17 +256,18 @@
         </div>
 
     </div>
-    <div class="tgb" data-aos="fade-left">
+    <div class="tgb" data-aos="fade-up"
+     data-aos-duration="3000" >
         <h1>Pick Your Plan</h1>
         <p>Stay active Wherever you are with a smart fitness memdership,offering access to premium gyms and fitness
             centres in <br> 75+ cities</p>
     </div>
-    <div data-aos="fade-down-right">
+    <div >
         <img src="https://fitpass.co.in/images/fitcoach/desktop-plans.png"
             style="height: 50%; width: 90%; display: block; margin:0 auto; border-radius: 10px;" alt="Image">
     </div>
      
-    <div data-aos="fade-down-left">
+    <div >
          <h2 class="yuv">Hear from our <span class="yuh">happy Fitsters</span></h2>
   <div class="video">
 
@@ -301,7 +310,8 @@
   </div>
     </div>
  
-    <div class="imageof" data-aos="flip-left">
+    <div class="imageof"  data-aos="fade-up"
+     data-aos-duration="3000">
         <h1>From our <span style="color: red;">Fitness Journal</span></h1>
         <p class="">WE provide scientifically-backed advice to help you stay healthy,along with helpful articles to
             empower your journey towards better health</p>
@@ -335,19 +345,20 @@
     </div>
     <hr>
 
-    <div class="info-section"data-aos="flip-up">
+    <div class="info-section">
         <h1>Know everything about Pune</h1>
         <p>Explore the answers to understand this innovative feature better so you stay ahead in your fitness journey
         </p>
 
         <div>
-          <div data-aos="zoom-in-down">
+          <div >
             
 <div class="container my-4">
   <h2 class="mb-4">Frequently Asked Questions</h2>
 </div>
 <div>
-  <div class="accordion" id="faqAccordion">
+  <div class="accordion" id="faqAccordion"  data-aos="fade-up"
+     data-aos-duration="3000">
     <!-- Question 1 -->
     <div class="accordion-item">
       <p class="faq-question" data-bs-toggle="collapse" data-bs-target="#faq1" aria-expanded="false" aria-controls="faq1">
@@ -372,7 +383,8 @@
     </div>
 
     <!-- Question 2 -->
-    <div class="accordion-item">
+    <div class="accordion-item"  data-aos="fade-up"
+     data-aos-duration="3000">
       <p class="faq-question" data-bs-toggle="collapse" data-bs-target="#faq2" aria-expanded="false" aria-controls="faq2">
       Can I get a trial or guest pass before committing to a FITPASS membership?
         <i class="fa-solid fa-chevron-down"></i>
@@ -388,7 +400,7 @@ No, FITPASS currently does not offer a trial or guest pass for workouts. However
   </div>
 </div>
 
-          </div data-aos="zoom-in-down">
+          </div >
             <h3 class="contact-info">
                 Can't find an answer? Reach out to our team directly at care@fitpass.co.in or dial 1800-5714-466.
             </h3>
@@ -417,7 +429,8 @@ No, FITPASS currently does not offer a trial or guest pass for workouts. However
 
       <hr>
 
-    <div class="containersa"  data-aos="zoom-out-down">
+    <div class="containersa"  data-aos="fade-up"
+     data-aos-duration="3000">
 
         <div class="left">
             <h1>Get FITPASS & Get Moving!</h1>
